# AgtecCore

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cookiecutter.json  pyproject.toml  sonar-project.properties
{{cookiecutter.project_slug}}/: .coveragerc  .env.example  .gitignore  .prospector.yaml  Dockerfile  DockerfileDev  LICENSE  README.md  dev.docker-compose.yml  dev.dockerfile  docker-compose.yml  docker-dev.yml  manage.py  mkdocs.yml  mock_data.py  mock_superuser.py  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-extras.in  requirements.in  requirements.txt
{{cookiecutter.project_slug}}/atendimento/: apps.py  forms.py  models.py  signals.py  utils.py
{{cookiecutter.project_slug}}/atendimento/migrations/: 0001_initial.py  0002_auto_20230529_1500.py
{{cookiecutter.project_slug}}/base/: asgi.py  elastic.py  settings.py  urls.py  urls_api.py  wsgi.py
{{cookiecutter.project_slug}}/configuracao_core/: apps.py  forms.py  models.py  urls.py
{{cookiecutter.project_slug}}/configuracao_core/api/: api_urls.py  api_views.py  serializers.py
{{cookiecutter.project_slug}}/configuracao_core/forms/: dadosgerais.py  gestor.py  imagenssistema.py
{{cookiecutter.project_slug}}/configuracao_core/migrations/: 0001_initial.py  0002_auto_20230626_1353.py
{{cookiecutter.project_slug}}/configuracao_core/templates/configuracao_core/: index.html
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_dadosgerais/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_gestor/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_imagemgenerica/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_imagemlogin/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_imagenssistema/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_logosistema/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/tests/tests_redesocial/: tests_forms.py  tests_models.py  tests_views.py
{{cookiecutter.project_slug}}/configuracao_core/views/: __init__.py  dadosgerais.py  gestor.py  imagemgenerica.py  imagemlogin.py  imagenssistema.py  index.py  logosistema.py  redesocial.py
{{cookiecutter.project_slug}}/contrib/: secret_gen.py
{{cookiecutter.project_slug}}/core/: admin.py  apps.py  cpf_anonymizer.py  custom_validators.py  date_utils.py  decorators.py  excecoes.py  firebase_messaging.py  form_input.py  forms.py  mensagens.py  models.py  populate_user_data.py  rest_framework.py  select2widgets.py  urls.py  utils.py
{{cookiecutter.project_slug}}/core/management/commands/: build.py  check_tests.py  core.py  doc.py  fastapi.py  flutter.py  flutter_mobile.py  flutter_web.py  formatters.py  parser_content.py  utils.py
{{cookiecutter.project_slug}}/core/middleware/: current_user.py  header_control.py
{{cookiecutter.project_slug}}/core/migrations/: 0001_initial.py  0002_parameterforbase.py  0003_auto_20230103_1751.py  0004_auto_20230104_0931.py  0005_audit_deleted.py  0006_auto_20230210_1424.py  0007_alter_audit_options_alter_audit_id_alter_audit_ip.py
{{cookiecutter.project_slug}}/core/templates/audit/: audit_detail.html  audit_list.html  audit_object_list.html  index.html
{{cookiecutter.project_slug}}/core/templates/core/: base.html  base_menu_vertical.html  home.html  index.html  index_app.html  index_app_cards.html  index_create.html  index_delete.html  index_detail.html  index_list.html  index_restore.html  index_update.html  settings.html
{{cookiecutter.project_slug}}/core/templates/errors/: bad_request.html  base.html  page_not_found.html  permission_denied.html  server_error.html
{{cookiecutter.project_slug}}/core/templatetags/: agtec_core.py  base.py  boilerplate_base.py
{{cookiecutter.project_slug}}/core/tests/: test_base.py
{{cookiecutter.project_slug}}/core/validators/: __init__.py  cpf_cnpj_validator.py  file_max_size.py
{{cookiecutter.project_slug}}/core/views/: constants.py  utils.py
{{cookiecutter.project_slug}}/core/views/audit/: __init__.py  audit_detail_view.py  audit_list_view.py
{{cookiecutter.project_slug}}/core/views/auth/: __init__.py  api_email.py  login_view.py  logout_view.py  request_password.py  reset_password.py  update_password.py
{{cookiecutter.project_slug}}/docs/: contribua.md  django_rest_framework.md  flake8.md  index.md  managers.md  prospector.md  pytest.md  python-decouple.md
{{cookiecutter.project_slug}}/docs/aprenda_a_usar/: index.md
{{cookiecutter.project_slug}}/docs/contribuindo/: bugs.md  documentacao.md  index.md  requests.md  to_do.md
{{cookiecutter.project_slug}}/docs/django_apps/: auditar.md  bloco_de_botoes_extra.md  escondendo_campos.md  filter_example.md  index.md  modal_foreign_key.md  multiple_choice_field_example.md  templates.md  unique_together.md  widget_data.md
{{cookiecutter.project_slug}}/docs/docker/: index.md  pycharm.md  pycharm_debug.md
{{cookiecutter.project_slug}}/docs/elastic/: index.md
{{cookiecutter.project_slug}}/docs/fastapi/: alembic.md  django_user.md  index.md
{{cookiecutter.project_slug}}/docs/flutter/: index.md
{{cookiecutter.project_slug}}/docs/sphinx/: documentacao_dev.md
{{cookiecutter.project_slug}}/docs/update_version/: index.md
{{cookiecutter.project_slug}}/docs/windows/: index.md
{{cookiecutter.project_slug}}/usuario/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py
{{cookiecutter.project_slug}}/usuario/api/: api_urls.py  api_views.py  serializers.py
{{cookiecutter.project_slug}}/usuario/middleware/: current_user.py
{{cookiecutter.project_slug}}/usuario/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/usuario/views/: __init__.py  index.py  usuario.py
(+520 files in other folders)
