[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
readme = "README.md"

[tool.taskipy.settings]
user_vars = true

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.project_slug.lower()}} --cov-report=html --cov-fail-under=90 --doctest-modules --doctest-glob='*.rst' --ignore=core --ignore=docs --ignore=venv --ignore=.venv --ignore=.env"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
max-line-length = 88
line-length = 88
ignore = "E203, W503"
extend-exclude = '''
(
  ^/core/*
  ^/docs/*
  ^.venv/*
  ^.env/
)
'''

[tool.taskipy.tasks]
build_all = "python manage.py build --all"
build_force = "python manage.py build --all --force"
core_checkupdate = "python manage.py core --checkupdate"
core_version = "python manage.py core --version"
coverage = "coverage html"
docs = "mkdocs serve"
lint = "black --diff --color . && isort --check-only --diff ."
mgt = "python manage.py migrate"
mkm = "python manage.py makemigrations"
post_test = "coverage html"
pre_test = "task lint"
run = "python manage.py runserver"
runserver = "python manage.py runserver"
shell = "python manage.py shell"
startapp = "python manage.py startapp"
test = "pytest -s -x --cov=projeto_base -vv"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
dateparser = "^1.1.8"
django-ckeditor = "^6.7.0"
django-filter = "^23.2"
django-image-optimizer = "^1.0.3"
django-tempus-dominus = "^5.1.2.17"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
drf-jsonmask = "^0.3.0"
drf-yasg = "^1.21.7"
dj-rest-auth = "^4.0.1"
elastic-apm = "^6.18.0"
gunicorn = "^21.2.0"
holidays = "^0.31"
pillow = "^10.0.0"
psycopg = "^3.1.10"
psycopg-binary = "^3.1.10"
python-decouple = "^3.8"
sentry-sdk = "^1.30.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
autopep8 = "^2.0.4"
beautifulsoup4 = "^4.12.2"
black = "^23.7.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
djlint = "^1.32.1"
faker = "^19.3.1"
html5lib = "^1.1"
isort = "^5.12.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
mkdocstrings = "^0.22.0"
model-bakery = "^1.15.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
rich = "^13.5.2"
sphinx = "^7.2.4"
sphinx-rtd-theme = "^1.3.0"
taskipy = "^1.12.0"
validate-docbr = "^1.10.0"